# Strategy_game

./: .gitignore  BattleChecker.py  HAPPY_NEW_YEAR!  InvokerMultiRequestsPriorityQueue.py  README.md  invokerreport.py  main.py  maininvokerpool.py  requirements.txt  useless.py  Процессы вокруг разработки.docx
compiler/: compiler.py  main.py
frontend/: .gitignore  angular.json  package-lock.json  package.json
invoker/: invoker_pool.py  invoker_request.py
invokersstructure/: InvokerReport  InvokerReport.py  SETTINGS.py  __init__.py  invoker.py  invokerMultiRequest.py  invokerMultiRequestPriorityQueue.py  invokerMultiRequest_test.py  invokerMultiRequests.py  invokerMultiRequestsPriorityQueue.py  invokerPool.py  invokerPool_test.py  invokerReport.py  invokerRequest.py  invokerStatus.py  invoker_report.py  singleton.py  singleton_test.py  test_invoker_report.py
libgame/: .gitignore  Cargo.toml
libgame/libgame_python/: .gitignore  Cargo.toml  libgame.pyi
libgame/libgame_python/scripts/: build.sh  install.sh
libgame/libgame_python/src/: lib.rs
libgame/libgame_python/tests/: libgame_test.py
libgame/libgame_python/wheels/: libgame-0.1.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  libgame-0.1.0-cp311-none-win_amd64.whl
mysite/: settings.py  urls.py
sandbox/: admin.py  forms.py  tests.py  urls.py  views.py
test_solutions/: draughts.cpp
visualization/visualization_python/: Cargo.toml  pyproject.toml  visualization.pyi
visualization/visualization_python/scripts/: build.sh  install.sh
visualization/visualization_python/src/: lib.rs
(+436 files in other folders)
